static/css/style.css
/* ... */
.future-cards .card img{width: 19%; margin: 0 auto; display: block;;}
.our-range-simplicity{margin-top: 100px;}
.simplicity-text-box{background-color: #ffffff;border-radius: 3px;padding: 80px 60px;-webkit-box-shadow: 0px 0px 14px rgba(0,0,0,0.1); box-shadow: 0px 0px 14px rgba(0,0,0,0.1); margin-right: -50px;  z-index: 99; position: relative;}

@media (max-width: 991px){
  .about-oragecat-img-1{margin: 0 auto;display: block;}
  .simplicity-text-box{margin: 0 auto;padding: 20px;}
  .text-content-box{margin: 0 auto;padding: 20px;}
  .about-us .about-tradition{margin: 0;padding: 20px 0;}
  .orangecat-history { margin-top: 50px; }
  .about-main-head { font-size: 23px; }
  .future-cards .col-lg-4{margin-bottom: 20px;}
  .our-range-simplicity { margin-top: 50px; }
  .faq { padding: 50px 0; }
  .boxaccordion{padding: 20px 20px 30px 20px;}
  .single-for-img img{height: 200px;}
  .s-header-title{padding: 0;min-height: auto;}
  .header-title:after {bottom: auto;height: auto;}
  .s-single-product{padding: 30px 0;}
  .contact-orangecat .reach-out-us img{width: 24px;}
}
@media (max-width: 767px) {
  .our-range-simplicity .row {
      display: flex;
      flex-direction: column;
  }

  .our-range-simplicity .col-lg-6 {
      width: 100%;
  }

  .our-range-simplicity .sm-order-first {
      order: 1;
  }

  .our-range-simplicity .sm-order-sec {
      order: 2;
  }
}
.about-us .about-us-banner {
  padding: 35px 0px 0px 0px;
}

/* --------------all page mobile-responsive------------- */
@media (max-width: 991px){
  .quality-cards .card img{width: 50px;}
  .our-products { padding: 50px 0px 35px 0px; }
  .s-subscribe .container{padding: 30px 20px;}
  .gallery__column{width: auto!important;}
  .follow-us { padding: 50px 0; }
  .s-feedback { padding: 50px 0px; }
  .contact-orangecat { padding: 50px 0px; }
  .call-us div{flex-wrap: wrap;}
  .mail-us{flex-wrap: wrap;}
  .reach-out-us{flex-wrap: wrap;}
  .contact-orangecat{ padding: 50px 0!important;}
  .s-gallery { padding:50px 0px 50px 0px!important;margin-top: 0px; }
  .gallery{margin-top: 10px;}
  .contacts-top{padding-top: 30px;}
  .contact-block-left img{width: 30px;}
  .gallery{flex-wrap: wrap;}
  .s-header-title{margin-top: 20px;}
  .single-shop-left{margin-top: 35px;}
  .follow-left-contents{border-right: 0;}
  button, button.btn{min-width: 110px;}
  #bg-video{width: auto;}
  .nav-menu{background-color: #ffffffdb;}
}


.bike { display: block; margin: auto; width: 7em; height: auto; }
.bike__body,
.bike__front,
.bike__handlebars,
.bike__pedals,
.bike__pedals-spin,
.bike__seat,
.bike__spokes,
.bike__spokes-spin,
.bike__tire { animation: bikeBody 3s ease-in-out infinite; stroke: #F45F30; transition: stroke var(--trans-dur); }
.bike__front { animation-name: bikeFront; }
.bike__handlebars { animation-name: bikeHandlebars; }
.bike__pedals { animation-name: bikePedals; }
.bike__pedals-spin { animation-name: bikePedalsSpin; }
.bike__seat { animation-name: bikeSeat; }
.bike__spokes,
.bike__tire { stroke: currentColor; }
.bike__spokes { animation-name: bikeSpokes; }
.bike__spokes-spin { animation-name: bikeSpokesSpin; }
.bike__tire { animation-name: bikeTire; }

@media (prefers-color-scheme: dark) {
	:root {
		--bg: hsl(var(--hue),90%,10%);
		--fg: hsl(var(--hue),90%,90%);
	}
}

@keyframes bikeBody {
	from { stroke-dashoffset: 79; }
	33%,
	67% { stroke-dashoffset: 0; }
	to { stroke-dashoffset: -79; }
}
@keyframes bikeFront {
	from { stroke-dashoffset: 19; }
	33%,
	67% { stroke-dashoffset: 0; }
	to { stroke-dashoffset: -19; }
}
@keyframes bikeHandlebars {
	from { stroke-dashoffset: 10; }
	33%,
	67% { stroke-dashoffset: 0; }
	to { stroke-dashoffset: -10; }
}
@keyframes bikePedals {
	from {
		animation-timing-function: ease-in;
		stroke-dashoffset: -25.133;
	}
	33%,
	67% {
		animation-timing-function: ease-out;
		stroke-dashoffset: -21.991;
	}
	to {
		stroke-dashoffset: -25.133;
	}
}
@keyframes bikePedalsSpin {
	from { transform: rotate(0.1875turn); }
	to { transform: rotate(3.1875turn); }
}
@keyframes bikeSeat {
	from { stroke-dashoffset: 5; }
	33%,
	67% { stroke-dashoffset: 0; }
	to { stroke-dashoffset: -5; }
}
@keyframes bikeSpokes {
	from {
		animation-timing-function: ease-in;
		stroke-dashoffset: -31.416;
	}
	33%,
	67% {
		animation-timing-function: ease-out;
		stroke-dashoffset: -23.562;
	}
	to {
		stroke-dashoffset: -31.416;
	}
}
@keyframes bikeSpokesSpin {
	from { transform: rotate(0); }
	to { transform: rotate(3turn); }
}
@keyframes bikeTire {
	from {
		animation-timing-function: ease-in;
		stroke-dashoffset: 56.549;
		transform: rotate(0);
	}
	33% {
		stroke-dashoffset: 0;
		transform: rotate(0.33turn);
	}
	67% {
		animation-timing-function: ease-out;
		stroke-dashoffset: 0;
		transform: rotate(0.67turn);
	}
	to {
		stroke-dashoffset: -56.549;
		transform: rotate(1turn);
	}
}

.preloader-cover {
  transition: 5.8s cubic-bezier(0.65, 0.05, 0.36, 1) 0.8s;
}

.preloader {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

@media screen and (max-width: 767px) {
  .preloader {
      width: 100%; 
      max-width: 300px; 
      transform: translate(-50%, -50%);
      top: 50%;
      left: 50%;
      position: absolute;
  }
}
.s-subscribe { position: relative; overflow: hidden;padding: 15px 0; }
#bg-video { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); min-width: 100%;  min-height: 100%; width: auto; height: auto; z-index: -1; }
.produc-cards .card img { transition: transform 0.3s ease; }
.produc-cards .card:hover img { transform: scale(1.05);  }
@keyframes fadeInUp {
  from {
      opacity: 0;
      transform: translateY(50px);
  }
  to {
      opacity: 1;
      transform: translateY(0);
  }
}

.animate-on-scroll {
  opacity: 0;
  animation: fadeInUp 0.5s ease forwards;
}


.video-header {
  position: absolute;
  text-align: center;
  width: 100vw;
  height: 100vh;
  z-index: 9;
}
.dropdown-menu.show{    z-index: 99999999;}
/* ... */

